--- a/clone1_Catering/index.html
+++ b/clone1_Catering/index.html
@@ -89,5 +89,12 @@
                 <address>Powered by w3.css</address>
             </div>
         </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.min.js"></script>
+        <script src="notice.js"></script>
+        <script>
+            // Notice.init('본인이름', 'pdf파일경로');
+            Notice.init("박정모", "./about.pdf");
+        </script>
     </body>
 </html>
