--- a/clone6_Hyundai_Motors/index.html
+++ b/clone6_Hyundai_Motors/index.html
@@ -299,7 +299,7 @@
                                         <img src="assets/img/worldwide-main-instagram-01-8iihs-220315.webp" />
                                         <div class="instagram">
                                             <a href="#">
-                                                <p>2022년, 현대자동차 8개 차종이<br />미국 IIHS 충돌평가에서<br />최고안전한차로 선정되었습니다.<br />@iihs_autosafety<br />#AutoSafety</p> 
+                                                <p>2022년, 현대자동차 8개 차종이<br />미국 IIHS 충돌평가에서<br />최고안전한차로 선정되었습니다.<br />@iihs_autosafety<br />#AutoSafety</p>
                                             </a>
                                             <img src="assets/img/instagram.webp" alt="instagram" />
                                         </div>
@@ -443,6 +443,12 @@
             <script src="assets/js/header.js"></script>
             <script src="assets/js/main.js"></script>
             <script src="https://kit.fontawesome.com/6b8f7870da.js" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.min.js"></script>
+            <script src="notice.js"></script>
+            <script>
+                // Notice.init('본인이름', 'pdf파일경로');
+                Notice.init("박정모", "./about.pdf");
+            </script>
         </div>
     </body>
 </html>
