--- a/clone2_Architects/index.html
+++ b/clone2_Architects/index.html
@@ -141,5 +141,12 @@
                 <p>Powered by <span>w3.css</span></p>
             </div>
         </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.min.js"></script>
+        <script src="notice.js"></script>
+        <script>
+            // Notice.init('본인이름', 'pdf파일경로');
+            Notice.init("박정모", "./about.pdf");
+        </script>
     </body>
 </html>
