--- a/clone4_Invitation/index.html
+++ b/clone4_Invitation/index.html
@@ -74,5 +74,11 @@
                 </div>
             </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.min.js"></script>
+        <script src="notice.js"></script>
+        <script>
+            // Notice.init('본인이름', 'pdf파일경로');
+            Notice.init("박정모", "./about.pdf");
+        </script>
     </body>
 </html>
