--- a/clone5_Naver_signup/index.html
+++ b/clone5_Naver_signup/index.html
@@ -141,10 +141,14 @@
         </div>
 
         <script src="libs/BadRequestException.js"></script>
-        <script src="libs/RegexHelper.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.min.js"></script>
+        <script src="libs/RegexHelper.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.min.js"></script>
         <script src="notice.js"></script>
         <script>
+            // Notice.init('본인이름', 'pdf파일경로');
+            Notice.init("박정모", "./about.pdf");
 
+            
             document.querySelector("#join_form").addEventListener("submit", (e) => {
                 e.preventDefault();
 
@@ -210,8 +214,7 @@
                     return;
                 }
             });
-            // Notice.init('본인이름', 'pdf파일경로');
-            Notice.init("박정모", "./about.pdf");
+            
         </script>
     </body>
 </html>
