--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <h1>박정모의 포트폴리오 임시 사이트</h1>
         <hr />
+        <h2>바닐라 스크립트 클론 코딩</h2>
         <ol>
             <li><a href="./clone1_Catering">클론코딩 1 Catering Site</a></li>
             <li><a href="./clone2_Architects/">클론코딩 2 Architects Site</a></li>
@@ -17,6 +18,9 @@
             <li><a href="./clone4_Invitation/">클론코딩 4 Invitation Site</a></li>
             <li><a href="./clone5_Naver_signup/">클론코딩 5 Naver Signup Site</a></li>
             <li><a href="./clone6_Hyundai_Motors/">클론코딩 6 Hyundai Mortors Site</a></li>
+        </ol>
+        <h2>리액트 클론코딩</h2>
+        <ol>
             <li><a href="./react_clonecodding_1/">리액트 클론코딩 1</a></li>
         </ol>
     </body>
