--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="./react_clonecodding_2/">리액트 클론코딩 2 - Architects Site</a></li>
             <li><a href="./react_clonecodding_3/">리액트 클론코딩 3 - Naver Signup Site</a></li>
             <li><a href="./react_clonecodding_4/">리액트 클론코딩 4 - Baskin Robbins Homepage</a></li>
+            <li><a href="./react_semi_project/">리액트 코딩 - 강원도 반려동물 동반관광 API + 카카오맵 API</a></li>
         </ol>
     </body>
 </html>
